[project]
name = "async-hyperliquid"
version = "0.1.13"
description = "Async Hyperliquid client using aiohttp"
authors = [{ name = "oneforalone", email = "oneforalone@proton.me" }]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "aiohttp (>=3.11.12,<4.0.0)",
    "msgpack (>=1.1.0,<2.0.0)",
    "eth-account (>=0.13.5,<0.14.0)",
    "eth-utils (>=5.2.0,<6.0.0)",
]

[project.urls]
Homepage = "https://github.com/oneforalone/async-hyperliquid"
Documentation = "https://github.com/oneforalone/async-hyperliquid"
Repository = "https://github.com/oneforalone/async-hyperliquid"
Issues = "https://github.com/oneforalone/async-hyperliquid/issues"
# Changelog = "https://github.com/oneforalone/async-hyperliquid/blob/master/CHANGELOG.md"

[tool.poetry]
packages = [{ include = "async_hyperliquid" }]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"
pytest-ruff = "^0.4.1"
pytest-cov = "^6.0.0"
pre-commit = "^4.1.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--verbose --capture=no"
asyncio_default_fixture_loop_scope = "session"
